# wdl-rs

./: Cargo.toml  LICENSE  README.md
benches/: parser.rs
resources/test/: comprehensive.wdl  expressions.wdl
src/: ast.rs  lib.rs  model.rs
src/parsers/: mod.rs
src/parsers/pest/: declarations.rs  document.rs  expressions.rs  meta.rs  mod.rs  node.rs  primitives.rs  task.rs  wdl.pest  workflow.rs
src/parsers/tree_sitter/: declarations.rs  document.rs  expressions.rs  meta.rs  mod.rs  node.rs  old_node.rs  primitives.rs  syntax.rs  task.rs  workflow.rs
