[package]
name = "wdl"
version = "0.1.0"
authors = ["John Didion <github@didion.net>"]
description = "Rust parser for Workflow Description Language (WDL)"
homepage = "https://github.com/jdidion/wdl-rs"
repository = "https://github.com/jdidion/wdl-rs"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
error-stack = "0.2.4"
paste = "1.0.11"
pest = "2.5.2"
pest-wdl-1 = { version = "0.1.5", path = "../pest-wdl" }
pest_derive = "2.5.2"
regex = "1.7.0"
thiserror = "1.0.38"
tree-sitter = "0.20.9"
tree-sitter-wdl-1 = "0.1.7"

[features]
# TODO: gate pest and tree-sitter parsers on features that are enabled by default
#pest = []
#tree-sitter = []